[metadata]
name = minipyparser
version = 0.1.0
author = Marcel Guinhos
author_email = mguinhos@gmail.com
description = A minimal python parser, written in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mguinhos/MiniPyParser

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src